<resources>
    <string name="app_name">TBC_davaleba3_userInfo</string>
    <string name="profile_info">Profile Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="again">Again</string>
</resources>